--- a/index.html
+++ b/index.html
@@ -41,6 +41,19 @@
             font-family: sans-serif;
             color: #171a1b;
         }
+
+        .two-columns {
+            text-align: center;
+            font-size: 0;
+        }
+
+        .two-columns .column {
+            width: 100%;
+            max-width: 300px;
+            display: inline-block;
+            vertical-align: top;
+            text-align: center;
+        }
     </style>
 </head>
 
@@ -56,7 +69,7 @@
 
             <!-- LOGO SECTION -->
             <tr>
-                <td>
+                <td style="padding: 14px 0 4px;">
                     <table width="100%">
 
                         <tr>
@@ -64,7 +77,7 @@
 
                                 <table class="column">
                                     <tr>
-                                        <td>
+                                        <td style="padding: 0 62px 10px;">
                                             <a href="#"><img src="img/modern.jpg" alt="Mordern Logo" width="180px"
                                                     title="Mordern Logo"></a>
                                         </td>
@@ -74,7 +87,7 @@
 
                                 <table class="column">
                                     <tr>
-                                        <td>
+                                        <td style="padding: 10px 72px;">
                                             <a href="#"><img src="img/black-facebook.png" alt="" width="30px"></a>
                                             <a href="#"><img src="img/black-twitter.png" alt="" width="30px"></a>
                                             <a href="#"><img src="img/black-youtube.png" alt="" width="30px"></a>
@@ -92,7 +105,15 @@
             </tr>
 
             <!-- BANNER IMAGE -->
-
+            <tr>
+                <td>
+                    <a href="#">
+                        <img src="img/banner.jpg" alt="" width="600" style="max-width: 100%;" />
+                    </a>
+                    <l></l>
+                    </a>
+                </td>
+            </tr>
 
             <!-- THREE COLUMN SECTION -->
 
