--- a/index.html
+++ b/index.html
@@ -54,6 +54,27 @@
             vertical-align: top;
             text-align: center;
         }
+        .three-columns{
+            text-align: center;
+            font-size: 0;
+            padding: 15px 0 25px;
+
+        }
+        .three-columns .column {
+            width: 100%;
+            max-width: 200px;
+            display: inline-block;
+            vertical-align: top;
+            text-align: center;
+        }
+        .three-columns .padding{
+            padding: 15px;
+        }
+        .three-columns .content{
+            font-size: 15px;
+            line-height: 20px;
+            padding: 0 5px;
+        }
     </style>
 </head>
 
@@ -116,7 +137,77 @@
             </tr>
 
             <!-- THREE COLUMN SECTION -->
+            <tr>
+                <td>
+                    <tabel width="100%">
+                        <tr>
+                            <td class="three-columns">
+                                <table class="column">
+                                    <tr>
+                                        <td class="padding">
+                                            <table class="content">
+                                                <tr>
+                                                    <td>
+                                                        <a href="#"><img src="img/email.png" alt="email" width="130px" style="max-width: 130px;">
+                                                        </a>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td>
+                                                        <p style="font-weight: bold; font-size: 17px;">Ecomerce</p>
+                                                        <p>Responsive HTML Email Template</p>
+                                                    </td>
+                                                </tr>
+                                            </table>
+                                        </td>
+                                    </tr>
+                                </table>
 
+                                <table class="column">
+                                    <tr>
+                                        <td class="padding">
+                                            <table class="content">
+                                                <tr>
+                                                    <td>
+                                                        <a href="#"><img src="img/settings.png" alt="email" width="130px" style="max-width: 130px;">
+                                                        </a>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td>
+                                                        <p style="font-weight: bold; font-size: 17px;">Web Design</p>
+                                                        <p>Responsive HTML Email </p>
+                                                    </td>
+                                                </tr>
+                                            </table>
+                                        </td>
+                                    </tr>
+                                </table>
+                                <table class="column">
+                                    <tr>
+                                        <td class="padding">
+                                            <table class="content">
+                                                <tr>
+                                                    <td>
+                                                        <a href="#"><img src="img/home.png" alt="email" width="130px" style="max-width: 130px;">
+                                                        </a>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td>
+                                                        <p style="font-weight: bold; font-size: 17px;">HTML Email</p>
+                                                        <p>HTML Email home</p>
+                                                    </td>
+                                                </tr>
+                                            </table>
+                                        </td>
+                                    </tr>
+                                </table>
+                            </td>
+                        </tr>
+                    </tabel>
+                </td>
+            </tr>
 
             <!-- TWO COLUMN SECTION -->
 
@@ -131,8 +222,3 @@
 </body>
 
 </html>
-
-<div style="position:absolute;bottom: 0;width: 100%;text-align: center;line-height: 40px;font-size: 25px;">
-    <a href="https://responsivehtmlemail.com/html-email-course/" target="_blank"
-        style="color: #404577;text-decoration: none;">www.ResponsiveHTMLEmail.com</a>
-</div>
