--- a/index.html
+++ b/index.html
@@ -54,12 +54,14 @@
             vertical-align: top;
             text-align: center;
         }
-        .three-columns{
+
+        .three-columns {
             text-align: center;
             font-size: 0;
             padding: 15px 0 25px;
 
         }
+
         .three-columns .column {
             width: 100%;
             max-width: 200px;
@@ -67,13 +69,47 @@
             vertical-align: top;
             text-align: center;
         }
-        .three-columns .padding{
+
+        .three-columns .padding {
             padding: 15px;
         }
-        .three-columns .content{
+
+        .three-columns .content {
             font-size: 15px;
             line-height: 20px;
             padding: 0 5px;
+        }
+
+        .two-columns.last {
+            padding: 15px 0;
+        }
+
+        .two-columns .padding {
+            padding: 20px;
+        }
+
+        .two-columns .content {
+            font-size: 15px;
+            line-height: 20px;
+            text-align: left;
+        }
+
+        .button {
+            background-color: #ffffff;
+            color: #171a1b;
+            text-decoration: none;
+            padding: 12px 20px;
+            border-radius: 5px;
+            font-weight: bold;
+        }
+
+        .button-dark {
+            background-color: #171a1b;
+            color: #ffffff;
+            text-decoration: none;
+            padding: 12px 20px;
+            border-radius: 5px;
+            font-weight: bold;
         }
     </style>
 </head>
@@ -131,8 +167,6 @@
                     <a href="#">
                         <img src="img/banner.jpg" alt="" width="600" style="max-width: 100%;" />
                     </a>
-                    <l></l>
-                    </a>
                 </td>
             </tr>
 
@@ -140,82 +174,178 @@
             <tr>
                 <td>
                     <tabel width="100%">
+            <tr>
+                <td class="three-columns">
+                    <table class="column">
                         <tr>
-                            <td class="three-columns">
-                                <table class="column">
+                            <td class="padding">
+                                <table class="content">
                                     <tr>
-                                        <td class="padding">
-                                            <table class="content">
-                                                <tr>
-                                                    <td>
-                                                        <a href="#"><img src="img/email.png" alt="email" width="130px" style="max-width: 130px;">
-                                                        </a>
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <td>
-                                                        <p style="font-weight: bold; font-size: 17px;">Ecomerce</p>
-                                                        <p>Responsive HTML Email Template</p>
-                                                    </td>
-                                                </tr>
-                                            </table>
+                                        <td>
+                                            <a href="#"><img src="img/email.png" alt="email" width="130px"
+                                                    style="max-width: 130px;">
+                                            </a>
                                         </td>
                                     </tr>
-                                </table>
-
-                                <table class="column">
                                     <tr>
-                                        <td class="padding">
-                                            <table class="content">
-                                                <tr>
-                                                    <td>
-                                                        <a href="#"><img src="img/settings.png" alt="email" width="130px" style="max-width: 130px;">
-                                                        </a>
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <td>
-                                                        <p style="font-weight: bold; font-size: 17px;">Web Design</p>
-                                                        <p>Responsive HTML Email </p>
-                                                    </td>
-                                                </tr>
-                                            </table>
-                                        </td>
-                                    </tr>
-                                </table>
-                                <table class="column">
-                                    <tr>
-                                        <td class="padding">
-                                            <table class="content">
-                                                <tr>
-                                                    <td>
-                                                        <a href="#"><img src="img/home.png" alt="email" width="130px" style="max-width: 130px;">
-                                                        </a>
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <td>
-                                                        <p style="font-weight: bold; font-size: 17px;">HTML Email</p>
-                                                        <p>HTML Email home</p>
-                                                    </td>
-                                                </tr>
-                                            </table>
+                                        <td>
+                                            <p style="font-weight: bold; font-size: 17px;">Ecomerce</p>
+                                            <p>Responsive HTML Email Template</p>
                                         </td>
                                     </tr>
                                 </table>
                             </td>
                         </tr>
-                    </tabel>
+                    </table>
+
+                    <table class="column">
+                        <tr>
+                            <td class="padding">
+                                <table class="content">
+                                    <tr>
+                                        <td>
+                                            <a href="#"><img src="img/settings.png" alt="email" width="130px"
+                                                    style="max-width: 130px;">
+                                            </a>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            <p style="font-weight: bold; font-size: 17px;">Web Design</p>
+                                            <p>Responsive HTML Email </p>
+                                        </td>
+                                    </tr>
+                                </table>
+                            </td>
+                        </tr>
+                    </table>
+                    <table class="column">
+                        <tr>
+                            <td class="padding">
+                                <table class="content">
+                                    <tr>
+                                        <td>
+                                            <a href="#"><img src="img/home.png" alt="email" width="130px"
+                                                    style="max-width: 130px;">
+                                            </a>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            <p style="font-weight: bold; font-size: 17px;">HTML Email</p>
+                                            <p>HTML Email home</p>
+                                        </td>
+                                    </tr>
+                                </table>
+                            </td>
+                        </tr>
+                    </table>
                 </td>
+            </tr>
+            </tabel>
+            </td>
             </tr>
 
             <!-- TWO COLUMN SECTION -->
+            <tr>
+                <td style="background-color: #26292b;color: #ffffff;">
+                    <table width="100%">
 
+                        <tr>
+                            <td class="two-columns last">
+                                <table class="column">
+                                    <tr>
+                                        <td class="padding">
+
+                                            <table class="content">
+                                                <tr>
+                                                    <td>
+                                                        <a href="#"><img src="img/keyboard.jpg" alt="" width="260"
+                                                                style="max-width: 260px;"></a>
+                                                    </td>
+                                                </tr>
+                                            </table>
+
+                                        </td>
+                                    </tr>
+                                </table>
+
+                                <table class="column">
+                                    <tr>
+                                        <td class="padding">
+
+                                            <table class="content">
+                                                <tr>
+                                                    <td>
+                                                        <p style="font-weight: bold;font-size: 
+                                                        18px;">Create Custom Desings</p>
+                                                        <p style="padding-bottom: 16px;">Over the years we have built up
+                                                            a massive portfolio our client website
+                                                            and email designs.
+                                                        </p>
+                                                        <a href="#" class="button">Read More</a>
+                                                    </td>
+                                                </tr>
+                                            </table>
+
+                                        </td>
+                                    </tr>
+                                </table>
+
+                            </td>
+                        </tr>
+
+                    </table>
+                </td>
+            </tr>
 
             <!-- TITLE, TEXT & BUTTON -->
+            <tr>
+                <td style="padding: 15px 0 50px;">
+                    <table width="100%">
+                        <tr>
+                            <td style="text-align: center;padding: 15px;">
+                                <p style="font-size: 20px;font-weight: bold;">HTML Email
+                                    Template</p>
+                                <p style="line-height: 23px;font-size: 15px;padding: 5px 0 15px;">Lorem, ipsum dolor sit
+                                    amet consectetur adipisicing elit.
+                                    Molestias cum sapiente ratione, doloremque earum qui temporibus corrupti in ipsum
+                                    itaque beatae. Itaque dolorum ea voluptatibus! Aliquam tenetur voluptas sapiente
+                                    sed.</p>
+                                <a href=#"" class="button-dark">View Course</a>
+                            </td>
 
+                        </tr>
+                    </table>
+
+                </td>
+            </tr>
 
             <!-- FOOTER SECTION -->
+            <tr>
+                <td style="background-color: #26292b;">
+                    <table width="100%">
+
+                        <tr>
+                            <td style="text-align: center;padding: 45px 20px;color: #ffffff;">
+                                <a href="#"><img src="img/modern-white.png" alt="" width="180px">
+                                </a>
+                                <p style="padding: 10px;">Mordern HTML Email</p>
+                                <p style="padding: 10px;">123 Street Road, City, State 55555</p>
+                                <a href="#"><img src="img/white-facebook.png" alt="" width="30px"></a>
+                                <a href="#"><img src="img/white-twitter.png" alt="" width="30px"></a>
+                                <a href="#"><img src="img/white-youtube.png" alt="" width="30px"></a>
+                                <a href="#"><img src="img/white-linkedin.png" alt="" width="30px"></a>
+                                <a href="#"><img src="img/white-instagram.png" alt="" width="30px"></a>
+                                <p style="padding: 10px;">SUBSCRIBE</p>
+                            </td>
+                        </tr>
+
+
+                    </table>
+
+                </td>
+            </tr>
         </table>
     </center>
 
