Updated YouTube and linkedin links

--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
                                         <td style="padding: 10px 72px;">
                                             <a href="#"><img src="img/black-facebook.png" alt="" width="30px"></a>
                                             <a href="#"><img src="img/black-twitter.png" alt="" width="30px"></a>
-                                            <a href="#"><img src="img/black-youtube.png" alt="" width="30px"></a>
-                                            <a href="#"><img src="img/black-linkedin.png" alt="" width="30px"></a>
+                                            <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer"><img src="img/black-youtube.png" alt="" width="30px"></a>
+                                            <a href="https://www.linkedin.com/in/javier-garcia-estrada-b380421a0/" target="_blank" rel="noopener noreferrer"><img src="img/black-linkedin.png" alt="" width="30px"></a>
                                             <a href="#"><img src="img/black-instagram.png" alt="" width="30px"></a>
 
                                         </td>
@@ -334,8 +334,8 @@
                                 <p style="padding: 10px;">123 Street Road, City, State 55555</p>
                                 <a href="#"><img src="img/white-facebook.png" alt="" width="30px"></a>
                                 <a href="#"><img src="img/white-twitter.png" alt="" width="30px"></a>
-                                <a href="#"><img src="img/white-youtube.png" alt="" width="30px"></a>
-                                <a href="#"><img src="img/white-linkedin.png" alt="" width="30px"></a>
+                                <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer"><img src="img/white-youtube.png" alt="" width="30px"></a>
+                                <a href="https://www.linkedin.com/in/javier-garcia-estrada-b380421a0/" target="_blank" rel="noopener noreferrer"><img src="img/white-linkedin.png" alt="" width="30px"></a>
                                 <a href="#"><img src="img/white-instagram.png" alt="" width="30px"></a>
                                 <p style="padding: 10px;">SUBSCRIBE</p>
                             </td>
